added view model to controller to populate view

--- a/app/project/project.list.html
+++ b/app/project/project.list.html
@@ -1,7 +1,8 @@
 ﻿<div>
-     {{vm.gg}}
+     {{vm.gg}}  {{vm.project.title}}
     yfhdtjhtu
     <div ng-repeat="project in vm.projects">
+        <div>www</div>
         {{project.title}}
     </div>
 
