--- a/app/project/project.list.html
+++ b/app/project/project.list.html
@@ -3,7 +3,7 @@
         List of All Projects
     </div> 
     
-    <table>
+    <table class="table">
         <tr>
             <td>Id</td>
             <td>Title</td>
@@ -17,7 +17,7 @@
      </table>
 
 
-    <button ng-click="vm.AddNewProject()">New Project</button>
+    <button ng-click="vm.GoToAddPage()">New Project</button>
     
   
 </div>
