--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="app/project/project.module.js"></script>
     <script src="app/project/config.route.js"></script>
     <script src="app/project/project.controller.js"></script>
+    <script src="app/project/project.update.controller.js"></script>
 
     <!--core module-->
     <script src="app/core/core.module.js"></script>
