--- a/app/project/project.update.html
+++ b/app/project/project.update.html
@@ -1,4 +1,32 @@
 ﻿<div>
+    <table class="table">
+        <tr>
+            <td><textarea ng-model="vm.project.title">{{vm.project.title}}</textarea></td>
 
-    Update
+        </tr>
+
+        <tr>
+            <td><label>Status</label></td>
+            <td>
+                <select ng-model="vm.project.status">
+                    <option value="Active">Active</option>
+                    <option value="Completed">Completed</option>
+                    <option value="Canceled">Canceled</option>
+                    <option value="Delayed">Delayed</option>
+                </select>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>
+                <button ng-click="vm.Save()">Save</button>
+            </td>
+        </tr>
+
+
+
+
+
+    </table>
 </div>
